# epsilon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci_meson.yml  cmake.yml  codeql-analysis.yml  test.yml  tests.yml
epsilon/: CMakeLists.txt  epsilon.h  fwht.c  hash.c  hash.h  kpa.c  kpa.h  meson.build  pa.h  rng.c  rng.h  sorf.c  stats.c  stats.h  transform.c  transform.h  welford.c
examples/: CMakeLists.txt  example_BKPA_regression.c  example_FNV_hash.c  example_FWHT.c  example_KPA_regression.c  example_Welfords_method.c  example_hash.c  example_rng.c  example_stats.c  example_transform.c  example_xorshift.c  meson.build
src/: csv.c  csv.h  hash.c  hash.h  pa.h  rng.c  rng.h  stats.c  stats.h  transform.c  transform.h
subprojects/: unity.wrap
tests/: CMakeLists.txt  csv_test.c  fwht_test.c  hash_test.c  kpa_test.c  main.c  meson.build  rng_test.c  sorf_test.c  stats_test.c  transform_test.c  welford_test.c  xorshift_test.c
